--- a/PyQt/intro/tab.ui
+++ b/PyQt/intro/tab.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>921</width>
-    <height>690</height>
+    <width>1299</width>
+    <height>961</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -24,7 +24,10 @@
      </rect>
     </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>1</number>
+    </property>
+    <property name="tabsClosable">
+     <bool>true</bool>
     </property>
     <widget class="QWidget" name="tab">
      <attribute name="title">
@@ -43,7 +46,7 @@
        <string/>
       </property>
       <property name="pixmap">
-       <pixmap>C:/Users/rockman/Pictures/backGround/img_6407.jpg</pixmap>
+       <pixmap>../../../../../../rockman/Pictures/backGround/img_6407.jpg</pixmap>
       </property>
      </widget>
      <widget class="QLabel" name="label_2">
@@ -59,7 +62,7 @@
        <string/>
       </property>
       <property name="pixmap">
-       <pixmap>C:/Users/rockman/Pictures/Saved Pictures/a4.jpg</pixmap>
+       <pixmap>../../../../../../rockman/Pictures/Saved Pictures/a4.jpg</pixmap>
       </property>
       <property name="scaledContents">
        <bool>true</bool>
@@ -78,8 +81,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>921</width>
-     <height>26</height>
+     <width>1299</width>
+     <height>56</height>
     </rect>
    </property>
   </widget>
