--- a/PyQt/intro/todolist2.ui
+++ b/PyQt/intro/todolist2.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>891</width>
+    <width>1115</width>
     <height>1166</height>
    </rect>
   </property>
@@ -56,9 +56,9 @@
    <widget class="QLineEdit" name="addItem_lineEdit">
     <property name="geometry">
      <rect>
-      <x>80</x>
+      <x>70</x>
       <y>50</y>
-      <width>761</width>
+      <width>1031</width>
       <height>81</height>
      </rect>
     </property>
@@ -76,9 +76,22 @@
      <rect>
       <x>60</x>
       <y>250</y>
-      <width>801</width>
+      <width>1041</width>
       <height>791</height>
      </rect>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="save_pushButton">
+    <property name="geometry">
+     <rect>
+      <x>860</x>
+      <y>150</y>
+      <width>241</width>
+      <height>81</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Save to DB</string>
     </property>
    </widget>
   </widget>
@@ -87,7 +100,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>891</width>
+     <width>1115</width>
      <height>26</height>
     </rect>
    </property>
